# brainfuck

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: base.h  brainfuck.h  compat.h  compiler.h  environment.h  execution.h  helper.h  instruction.h  list.h  pass.h
src/: .brainfuck.c.swp  base.c  brainfuck.c  default.c  helper.c  list.c  main.c
